tests/expectations/compiler/records/nested_record_4_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372050]: A record cannot contain a tuple.
    --> compiler-test:6:9
     |
   6 |         bar: (Bar, Bar),
     |         ^^^
Error [ETYC0372050]: A struct cannot contain a tuple.
    --> compiler-test:10:9
     |
  10 |         bar: (Token, Token),
     |         ^^^
Error [ETYC0372030]: A struct or record cannot contain another record.
    --> compiler-test:10:9
     |
  10 |         bar: (Token, Token),
     |         ^^^
     |
     = Remove the record `Token` from `Bar`.
Error [ETYC0372030]: A struct or record cannot contain another record.
    --> compiler-test:10:9
     |
  10 |         bar: (Token, Token),
     |         ^^^
     |
     = Remove the record `Token` from `Bar`.
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {    
     | ^^^^^^^^^^^^
"""]
